
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
struct ast_private {int dummy; } ;


 size_t REGIDX_010 ;
 size_t REGIDX_014 ;
 size_t REGIDX_018 ;
 size_t REGIDX_020 ;
 size_t REGIDX_024 ;
 size_t REGIDX_02C ;
 size_t REGIDX_030 ;
 size_t REGIDX_214 ;
 size_t REGIDX_2E0 ;
 size_t REGIDX_2E4 ;
 size_t REGIDX_2E8 ;
 size_t REGIDX_2EC ;
 size_t REGIDX_2F0 ;
 size_t REGIDX_2F4 ;
 size_t REGIDX_2F8 ;
 size_t REGIDX_PLL ;
 size_t REGIDX_RFC ;
 int ast_moutdwm (struct ast_private*,int,int const) ;
 int check_dram_size_2500 (struct ast_private*,int const) ;
 int ddr_phy_init_2500 (struct ast_private*) ;
 int enable_cache_2500 (struct ast_private*) ;

__attribute__((used)) static void ddr3_init_2500(struct ast_private *ast, const u32 *ddr_table)
{

 ast_moutdwm(ast, 0x1E6E0004, 0x00000303);
 ast_moutdwm(ast, 0x1E6E0010, ddr_table[REGIDX_010]);
 ast_moutdwm(ast, 0x1E6E0014, ddr_table[REGIDX_014]);
 ast_moutdwm(ast, 0x1E6E0018, ddr_table[REGIDX_018]);
 ast_moutdwm(ast, 0x1E6E0020, ddr_table[REGIDX_020]);
 ast_moutdwm(ast, 0x1E6E0024, ddr_table[REGIDX_024]);
 ast_moutdwm(ast, 0x1E6E002C, ddr_table[REGIDX_02C] | 0x100);
 ast_moutdwm(ast, 0x1E6E0030, ddr_table[REGIDX_030]);


 ast_moutdwm(ast, 0x1E6E0200, 0x02492AAE);
 ast_moutdwm(ast, 0x1E6E0204, 0x00001001);
 ast_moutdwm(ast, 0x1E6E020C, 0x55E00B0B);
 ast_moutdwm(ast, 0x1E6E0210, 0x20000000);
 ast_moutdwm(ast, 0x1E6E0214, ddr_table[REGIDX_214]);
 ast_moutdwm(ast, 0x1E6E02E0, ddr_table[REGIDX_2E0]);
 ast_moutdwm(ast, 0x1E6E02E4, ddr_table[REGIDX_2E4]);
 ast_moutdwm(ast, 0x1E6E02E8, ddr_table[REGIDX_2E8]);
 ast_moutdwm(ast, 0x1E6E02EC, ddr_table[REGIDX_2EC]);
 ast_moutdwm(ast, 0x1E6E02F0, ddr_table[REGIDX_2F0]);
 ast_moutdwm(ast, 0x1E6E02F4, ddr_table[REGIDX_2F4]);
 ast_moutdwm(ast, 0x1E6E02F8, ddr_table[REGIDX_2F8]);
 ast_moutdwm(ast, 0x1E6E0290, 0x00100008);
 ast_moutdwm(ast, 0x1E6E02C0, 0x00000006);


 ast_moutdwm(ast, 0x1E6E0034, 0x00020091);


 ddr_phy_init_2500(ast);

 ast_moutdwm(ast, 0x1E6E0120, ddr_table[REGIDX_PLL]);
 ast_moutdwm(ast, 0x1E6E000C, 0x42AA5C81);
 ast_moutdwm(ast, 0x1E6E0034, 0x0001AF93);

 check_dram_size_2500(ast, ddr_table[REGIDX_RFC]);
 enable_cache_2500(ast);
 ast_moutdwm(ast, 0x1E6E001C, 0x00000008);
 ast_moutdwm(ast, 0x1E6E0038, 0xFFFFFF00);
}
